<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#565AFF"
    android:padding="16dp"
    android:orientation="vertical">


    <ImageView
        android:layout_width="218dp"
        android:layout_height="113dp"
        app:srcCompat="@drawable/logo2"
        tools:srcCompat="@drawable/logo2"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/UserMail"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/white"
        android:text="gdseyhan@hotmail.com"/>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="120dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/cardgame" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:onClick="ClickGame"
        android:text="@string/layout1"
        app:cornerRadius="30dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="120dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/googledocs" />

    <Button
        android:id="@+id/button2"
        app:cornerRadius="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:onClick="ClickFacial"
        android:text="@string/layout2" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="120dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logout" />

    <Button
        android:id="@+id/button3"
        app:cornerRadius="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="ClickLogout"
        android:text="@string/layout3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="378dp"
        android:layout_height="85dp" />

</LinearLayout>