<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login1Activity">

    <TextView
        android:id="@+id/textLoginHeader"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login1Welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="345dp"
        android:layout_height="170dp"
        android:layout_marginBottom="72dp"
        android:src="@drawable/ic_undraw_virtual_reality_y5ig"
        app:layout_constraintBottom_toTopOf="@+id/textLoginHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonStarted"
        android:layout_width="176dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/login1Text"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@+id/textLoginHeader"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/textLoginHeader"
        app:layout_constraintTop_toBottomOf="@+id/textLoginHeader" />

    <ImageView
        android:id="@+id/imageView2"
        android:src="@drawable/ic_wave__1_"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginBottom="104dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/login1Text2"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStarted" />
</androidx.constraintlayout.widget.ConstraintLayout>